<resources>
    <string name="app_name">TipsCalculator</string>
    <string name="service_cost">Cost of Service</string>
    <string name="how_was_the_service">How was the Service ?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
    <string name="enter_cost_of_service">Please enter the cost of service</string>
</resources>