<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsCalculatorActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilServiceCost"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_cost"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCostOfService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/how_was_the_service"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilServiceCost" />

            <RadioGroup
                android:id="@+id/rgTipsPercentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelService">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAmazing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/app_color"
                    android:padding="6dp"
                    android:text="@string/amazing_20"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/app_color"
                    android:padding="6dp"
                    android:text="@string/good_18"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbOkay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/app_color"
                    android:padding="6dp"
                    android:text="@string/okay_15"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchToRoundTips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/round_up_tip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@+id/rgTipsPercentage"
                app:thumbTint="@color/app_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                app:layout_constraintTop_toBottomOf="@+id/switchToRoundTips" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTipsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="gone"
                android:text="@string/tip_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>